OSX Mojave wrong interface scaling #56909

Closed
opened 2018-09-25 01:20:58 +02:00 by Roel Koster · 37 comments
Member

System Information
OSX Mojave

Blender Version
Broken: 2.79 and 2.80 dailies (guess the official builds as well)
Worked: Previous OS's

Short description of error
On OSX Mojave and HiDPI screen (iMac 2015 5k) interface is scaled wrong (way too large)

Exact steps for others to reproduce the error
Installed OSX Mojave.
Compiled blender (2.79 and 2.80)
Opening Blender shows an unreadable interface. You can barely see some buttons (all very large)
It's not corrupted.. just extremely large.
Pressing OSX "Full Screen" button or starting in OSX "Low Resolution Mode" fixes it temporarily.. but saving settings not.

I think the doubling of the interface on HiDPI now has to be scaled 50% or something.. My guess is that everything is 4x too large

Thanks for looking into it..
I'm back on Sierra.. btw ;-)

**System Information** OSX Mojave **Blender Version** Broken: 2.79 and 2.80 dailies (guess the official builds as well) Worked: Previous OS's **Short description of error** On OSX Mojave and HiDPI screen (iMac 2015 5k) interface is scaled wrong (way too large) **Exact steps for others to reproduce the error** Installed OSX Mojave. Compiled blender (2.79 and 2.80) Opening Blender shows an unreadable interface. You can barely see some buttons (all very large) It's not corrupted.. just extremely large. Pressing OSX "Full Screen" button or starting in OSX "Low Resolution Mode" fixes it temporarily.. but saving settings not. I think the doubling of the interface on HiDPI now has to be scaled 50% or something.. My guess is that everything is 4x too large Thanks for looking into it.. I'm back on Sierra.. btw ;-)
Author
Member

Added subscriber: @kostex

Added subscriber: @kostex

#56971 was marked as duplicate of this issue

#56971 was marked as duplicate of this issue

#56974 was marked as duplicate of this issue

#56974 was marked as duplicate of this issue

#56972 was marked as duplicate of this issue

#56972 was marked as duplicate of this issue

#56954 was marked as duplicate of this issue

#56954 was marked as duplicate of this issue
Author
Member

On request some screenshots..

Screenshot 2018-09-25 at 01.35.56.jpg

Screenshot 2018-09-25 at 01.37.51.jpg

Screenshot 2018-09-25 at 01.36.44.jpg
remark:
The last screenshot is a maximized main screen and then opened preferences window
As soon as I resize that window it refreshes with the correct scaling

On request some screenshots.. ![Screenshot 2018-09-25 at 01.35.56.jpg](https://archive.blender.org/developer/F4810032/Screenshot_2018-09-25_at_01.35.56.jpg) ![Screenshot 2018-09-25 at 01.37.51.jpg](https://archive.blender.org/developer/F4810031/Screenshot_2018-09-25_at_01.37.51.jpg) ![Screenshot 2018-09-25 at 01.36.44.jpg](https://archive.blender.org/developer/F4810030/Screenshot_2018-09-25_at_01.36.44.jpg) remark: The last screenshot is a maximized main screen and then opened preferences window As soon as I resize that window it refreshes with the correct scaling

Added subscriber: @carpe23

Added subscriber: @carpe23

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @exploding

Added subscriber: @exploding

Added subscriber: @MichaAListowski

Added subscriber: @MichaAListowski

Added subscriber: @brecht

Added subscriber: @brecht

I couldn't reproduce the error on macOS 10.14 with MacBook Pro, Retina 15-inch Early 2015. The UI appears to be scaled correctly in both 2.79 and 2.80.

Does the same issue happen with factory settings? By running Blender from the terminal like this:

./blender.app/Contents/MacOS/blender --factory-startup

Is there anything non-standard about your macOS system settings? Does changing any of the Display settings avoid the issue? Do you have any external displays connected?

I couldn't reproduce the error on macOS 10.14 with MacBook Pro, Retina 15-inch Early 2015. The UI appears to be scaled correctly in both 2.79 and 2.80. Does the same issue happen with factory settings? By running Blender from the terminal like this: ``` ./blender.app/Contents/MacOS/blender --factory-startup ``` Is there anything non-standard about your macOS system settings? Does changing any of the Display settings avoid the issue? Do you have any external displays connected?

In #56909#538381, @brecht wrote:
I couldn't reproduce the error on macOS 10.14 with MacBook Pro, Retina 15-inch Early 2015. The UI appears to be scaled correctly in both 2.79 and 2.80.

Does the same issue happen with factory settings? By running Blender from the terminal like this:

./blender.app/Contents/MacOS/blender --factory-startup

I got this same startup screen as on screen erlier. And i can tell the same as @kostex, when i resize window it start works perfectly.
Start of Blender 2.8 on Mojave - Movie

Is there anything non-standard about your macOS system settings? Does changing any of the Display settings avoid the issue? Do you have any external displays connected?

I installed if yesterday and the only changes from pure macOS will be :

  1. defaults write com.apple.dock autohide-delay -float 0; killall Dock
  2. defaults write com.apple.dock autohide-time-modifier -float 0; killall Dock
    But when i go back to default state nothing change with blender on start.
> In #56909#538381, @brecht wrote: > I couldn't reproduce the error on macOS 10.14 with MacBook Pro, Retina 15-inch Early 2015. The UI appears to be scaled correctly in both 2.79 and 2.80. > > Does the same issue happen with factory settings? By running Blender from the terminal like this: > ``` > ./blender.app/Contents/MacOS/blender --factory-startup > ``` I got this same startup screen as on screen erlier. And i can tell the same as @kostex, when i resize window it start works perfectly. [Start of Blender 2.8 on Mojave - Movie ](https://www.dropbox.com/s/lop21s0odad5frd/Blender28_Mojave.mov?dl=0) > > Is there anything non-standard about your macOS system settings? Does changing any of the Display settings avoid the issue? Do you have any external displays connected? I installed if yesterday and the only changes from pure macOS will be : 1) defaults write com.apple.dock autohide-delay -float 0; killall Dock 2) defaults write com.apple.dock autohide-time-modifier -float 0; killall Dock But when i go back to default state nothing change with blender on start.

Added subscriber: @Warun

Added subscriber: @Warun

Added subscriber: @PawelBzyl

Added subscriber: @PawelBzyl

Added subscriber: @mallow

Added subscriber: @mallow

Hi, For info...

I think I got it to work...
It seems related to the dark mode.

I was struggling also with the way thing are shown in the dark mode, so I went back to the light mode, but didn't like the aspect. I found this link http://mds.is/using-mojave-dark-mode-on-only-the-menu-bar-and-dock/ that explains how to get back to the dark only menu bar and dock (same as High Sierra).

Now when I launch Blender, zoom is OK. Full screen mode still causes some issues with display of menu content...

Hi, For info... I think I got it to work... It seems related to the dark mode. I was struggling also with the way thing are shown in the dark mode, so I went back to the light mode, but didn't like the aspect. I found this link http://mds.is/using-mojave-dark-mode-on-only-the-menu-bar-and-dock/ that explains how to get back to the dark only menu bar and dock (same as High Sierra). Now when I launch Blender, zoom is OK. Full screen mode still causes some issues with display of menu content...

From what I'm guessing, the issue happens specifically when building with the macOS 10.14 SDK, which the daily builds use now.

That would mean 2.79b is unaffected, which seems to be confirmed by the reports. Except for #56972, but I'm guessing that is a mistake?

From what I'm guessing, the issue happens specifically when building with the macOS 10.14 SDK, which the daily builds use now. That would mean 2.79b is unaffected, which seems to be confirmed by the reports. Except for #56972, but I'm guessing that is a mistake?

This issue was referenced by 786870e26f

This issue was referenced by 786870e26f83ec68f80ccd1fb5ba519a0bf893f6

This issue was referenced by 0722981e99

This issue was referenced by 0722981e99b0f174067b9d07eeaf7c55401f85eb

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Hi,

I might have missed something, I'm using 2.79b. Dark mode seems to have cause issues. I also tested 2.80 beta, with dark mode I had the scaling problem...

Hi, I might have missed something, I'm using 2.79b. Dark mode seems to have cause issues. I also tested 2.80 beta, with dark mode I had the scaling problem...

For me the official 2.79b release worked fine, while the daily builds had the problem.

Regardless, we can't fix it retroactively. Try today's build, it should solve the issue.
https://builder.blender.org/download

For me the official 2.79b release worked fine, while the daily builds had the problem. Regardless, we can't fix it retroactively. Try today's build, it should solve the issue. https://builder.blender.org/download
Author
Member

Am I right to assume that only the blender 2.8 branch got your (perfectly working ;-) patch?
I've incorporated your patch in the master branch myself (personal use) but shouldn't it be in there officially? Still use the 2.79 daily a lot of course.

Thanks

Am I right to assume that only the blender 2.8 branch got your (perfectly working ;-) patch? I've incorporated your patch in the master branch myself (personal use) but shouldn't it be in there officially? Still use the 2.79 daily a lot of course. Thanks

2.79b Official - 30.09.2018
Zrzut ekranu 2018-10-1 o 08.29.13.png

And 2.80 works fine.

[2.79b Official - 30.09.2018 ](https://builder.blender.org/download/blender-2.79-bbd3ac73bcf-OSX-10.9-x86_64.zip) ![Zrzut ekranu 2018-10-1 o 08.29.13.png](https://archive.blender.org/developer/F4887455/Zrzut_ekranu_2018-10-1_o_08.29.13.png) And 2.80 works fine.

We do not call builds from builder.blender.org 2.79b, that naming is for the official releases from blender.org.

The master branch and 2.79 build from builder.blender.org now includes the fix as well.

We do not call builds from builder.blender.org 2.79**b**, that naming is for the official releases from blender.org. The master branch and 2.79 build from builder.blender.org now includes the fix as well.

For info
I downloaded from "builder.blender.org" and tested them in the configuration that works for me with the 2.79b version (dark mode modified as described here http://mds.is/using-mojave-dark-mode-on-only-the-menu-bar-and-dock/ )

blender-2.79.0-git20181001.786870e26f8-x86_64 => Crash (attached crash report)
crash blend 279.rtf

blender-2.80.0-git20181001.3cd98d9ef7e-x86_64 => no crash

For info I downloaded from "builder.blender.org" and tested them in the configuration that works for me with the 2.79b version (dark mode modified as described here http://mds.is/using-mojave-dark-mode-on-only-the-menu-bar-and-dock/ ) blender-2.79.0-git20181001.786870e26f8-x86_64 => Crash (attached crash report) [crash blend 279.rtf](https://archive.blender.org/developer/F4895991/crash_blend_279.rtf) blender-2.80.0-git20181001.3cd98d9ef7e-x86_64 => no crash

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

For me on today's compilation, everything is fine in both version 2.79 and 2.8.

For me on today's compilation, everything is fine in both version 2.79 and 2.8.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2018-10-04 17:54:48 +02:00

@Warun, that crash looks like a different bug, please open a new report for that.

This seems to be a crash in the translation system, so mention if you had that enabled.

@Warun, that crash looks like a different bug, please open a new report for that. This seems to be a crash in the translation system, so mention if you had that enabled.

Hi,
I don't know how you can say that the bug is resolved... with 2.79b that's what I get{F4937104}

Now I might issue another bug because with the version 2.79 I have a crash...Blender 2_79 crash.rtf

Tell me if I missed something ...

Hi, I don't know how you can say that the bug is resolved... with 2.79b that's what I get{[F4937104](https://archive.blender.org/developer/F4937104/Capture_d_e_cran_2018-10-04_a__18.29.17.png)} Now I might issue another bug because with the version 2.79 I have a crash...[Blender 2_79 crash.rtf](https://archive.blender.org/developer/F4937118/Blender_2_79_crash.rtf) Tell me if I missed something ...

If the official 2.79b release has the bug, we can't retroactively fix that, it will only be fixed in newer versions.

My understanding is the 2.80 daily build works ok for you, and that the 2.79 daily build crashes so we don't know if that one still has the problem?

If the official 2.79b release has the bug, we can't retroactively fix that, it will only be fixed in newer versions. My understanding is the 2.80 daily build works ok for you, and that the 2.79 daily build crashes so we don't know if that one still has the problem?

Ok, the only thing that I did check until now was that for "pure" dark mode 2.80 was working. That's where the misunderstanding was...
2.80 works... in all modes...
I'll open another bug

Ok, the only thing that I did check until now was that for "pure" dark mode 2.80 was working. That's where the misunderstanding was... 2.80 works... in all modes... I'll open another bug

Added subscriber: @JamesCrowther

Added subscriber: @JamesCrowther

Hi all and of course @brecht :) , Ok, so this issue is closed but, wanted to add my comments since as of the 27th of November I still have an issue with screen scaling. On macOS Mojave (see system-info.txt for details of my system/setup and blender version) 2.80.34 is broken. The screenshot shows what is happening. The UI doesn't fill the application window and the mouse pointer is offset, the visual location of the pointer is not the same as where blender thinks it is, its offset by a similar amount to how the ui has been sort of shrunk from the size of the window its rendered in.

It makes blender totally unusable at the moment since its very hard to click on menus, I have to sort of guess where Blender 'thinks' the mouse pointer is and hope that the ui buttons 'light up' when they have focus so I know I can click on the button I want to activate.

Soooo, is this the same issue as above, or a new bug? If its a new one ( and I am guessing that it is since the above has been closed but my system still exhibits this issue) then I think a new issue needs to be opened, otherwise re-open this one. Also this behaviour doesn't happen for me in 2.79b official on the same system. 2.79b renders the UI correctly scaled to fit within the window and the mouse pointer has no offset from the visible pointer on the screen.

Screen Shot 2018-11-27 at 11.21.33 am.png

Hi all and of course @brecht :) , Ok, so this issue is closed but, wanted to add my comments since as of the 27th of November I still have an issue with screen scaling. On macOS Mojave (see [system-info.txt](https://archive.blender.org/developer/F5730005/system-info.txt) for details of my system/setup and blender version) 2.80.34 is broken. The screenshot shows what is happening. The UI doesn't fill the application window and the mouse pointer is offset, the visual location of the pointer is not the same as where blender thinks it is, its offset by a similar amount to how the ui has been sort of shrunk from the size of the window its rendered in. It makes blender totally unusable at the moment since its very hard to click on menus, I have to sort of guess where Blender 'thinks' the mouse pointer is and hope that the ui buttons 'light up' when they have focus so I know I can click on the button I want to activate. Soooo, is this the same issue as above, or a new bug? If its a new one ( and I am guessing that it is since the above has been closed but my system still exhibits this issue) then I think a new issue needs to be opened, otherwise re-open this one. Also this behaviour doesn't happen for me in 2.79b official on the same system. 2.79b renders the UI correctly scaled to fit within the window and the mouse pointer has no offset from the visible pointer on the screen. ![Screen Shot 2018-11-27 at 11.21.33 am.png](https://archive.blender.org/developer/F5729996/Screen_Shot_2018-11-27_at_11.21.33_am.png)

See #57069 (macOS screen scaling wrong on startup) for that bug.

See #57069 (macOS screen scaling wrong on startup) for that bug.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56909
No description provided.