Fix T56909: wrong interface scale on macOS 10.14, when using 10.14 SDK.

This does not affect existing releases as far as I can tell, only new builds
using the new SDK have the problem.